contactus & Engagement Model UI Fixes

--- a/src/app/components/engagement-models/engagement-models.component.html
+++ b/src/app/components/engagement-models/engagement-models.component.html
@@ -3,7 +3,7 @@
     <div class="container">
        <div class="engagement-layout">
           <h1>Our <span>engagement models <br></span> that meet different project needs </h1>
-          <h6> <span>Check to understand<a></a></span> What suites you the best </h6>
+          <h6> <span>Check to understand</span> What suites you the best </h6>
        </div>
     </div>
  </div>
