--- a/src/styles.scss
+++ b/src/styles.scss
@@ -44,7 +44,13 @@ $uxmint-theme: mat-light-theme((
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;500;700&display=swap');
 
 // html, body { height: 100%;overflow-x: hidden; }
-
+*{
+    box-sizing: border-box;
+}
+*:focus,
+*:active{
+    outline: 0 !important;
+}
 app-root{
     min-height: 100vh;
     display: flex;
