header/footer & page title fixes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -111,22 +111,28 @@
                     <a href="tel:+91 9940410072">+91 9940410072</a>
                 </li>
                 <li>
-                    <a href="https://www.linkedin.com/school/uxmint">Linkedin</a>
+                    <a href="https://www.linkedin.com/school/uxmint">Linkedin</a> <span>|</span> <a href="https://medium.com/uxmint">Medium</a>
                 </li>
-                <li>
+                <!-- <li>
                     <a href="https://medium.com/uxmint">Medium</a>
-                </li>
+                </li> -->
             </ul> 
           
         </div>
     </div>
     <hr class="footer">
     <div class="footer-bottom">
-        <div class="rights float-left">
-            <h2>All Rights reserved@2021 </h2>
-        </div>
-        <div class="rights float-right">
-            <h2>Privacy Policy | Terms & Conditions </h2>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="rights">
+                    <h2>All Rights reserved@2021 </h2>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="policy">
+                    <h2>Privacy Policy | Terms & Conditions </h2>
+                </div>
+            </div>
         </div>
     </div>
 </div>
