--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -3,7 +3,7 @@
       <div class="container">
          <div class="contact-layout">
             <h1>We are eager to <span> get in touch </span><br> with you as well </h1>
-            <h6>you can drop us an email at <span>hello@uxmint.in</span></h6>
+            <h6>you can drop us an email at <span> <a href="mailto:enquire@uxmint.in?subject=Query and Collabration!">hello@uxmint.in</a></span></h6>
          </div>
       </div>
    </div>
