--- a/src/app/components/contact/contact.component.scss
+++ b/src/app/components/contact/contact.component.scss
@@ -23,7 +23,7 @@
         padding-top: 25px;
         color: #3B3B3B;
         font-family: Muli;
-         span{
+         span a{
             color: #C3343C;
             text-decoration: underline;
             
