--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,3 +1,6 @@
+@import '~bootstrap/scss/functions';
+@import '~bootstrap/scss/variables';
+@import '~bootstrap/scss/mixins';
 :host{
     display: flex;
     flex-direction: column;
@@ -21,7 +24,8 @@ button{
     flex-grow: 1;
     h3{
         color: #999;
-        font-size: 14px;
+        font-size: 16px;
+        padding-top: 27px;
         text-transform: uppercase;
     }
     ul{
@@ -32,6 +36,7 @@ button{
     li{
         list-style: none;
         margin-bottom: 10px;
+        padding-top: 27px;
         a{
             font-family: Muli;
             font-size: 16px;
@@ -74,5 +79,29 @@ button{
         width: auto;
         padding-top: 5px;
     }
+    }
+}
+@include media-breakpoint-down(lg){
+    .menu-content{
+        padding: 100px 10px;
+        li{
+            padding: 10px 0px;
+        }
+    }
+}
+@include media-breakpoint-down(md){
+    .menu-content{
+        padding: 100px 10px;
+        li{
+            padding: 10px 0px;
+        }
+    }
+}
+@include media-breakpoint-down(sm){
+    .menu-content{
+        padding: 100px 10px;
+        li{
+            padding: 10px 0px;
+        }
     }
 }
