--- a/src/app/components/works/works.component.html
+++ b/src/app/components/works/works.component.html
@@ -46,7 +46,7 @@
                   </div>
                   <div class="col-md-6">
                      <div class="right-image">
-                        <img src="./assets/images/works/works1.png">
+                        <img src="./assets/images/works/network1.webp">
                      </div>
                   </div>
                </div>
@@ -160,7 +160,7 @@
                   </div>
                   <div class="col-md-6">
                      <div class="right-image">
-                        <img src="./assets/images/works/works7.png">
+                        <img src="./assets/images/works/market1.webp">
                      </div>
                   </div>
                </div>
