--- a/src/app/modules/work/components/construction-portal/construction-portal.component.html
+++ b/src/app/modules/work/components/construction-portal/construction-portal.component.html
@@ -9,7 +9,7 @@
                     </div>
                 </div>
                 <div class="col-md-7 orderone">
-                        <img src="./assets/images/works/construction10.png">
+                        <img src="./assets/images/works/construction10.webp">
                 </div>
             </div>
         </div>
@@ -41,7 +41,7 @@
             </div>
     </div>
     <div class="image-event">
-        <img src="./assets/images/works/construction1.png">
+        <img src="./assets/images/works/construction1.webp">
     </div>
     <div class="target-strategy">
         <div class="container">
@@ -114,7 +114,7 @@
         </ul>
     </div>
     <div class="typography-image">
-        <img src="./assets/images/works/construction2.png">
+        <img src="./assets/images/works/construction2.webp">
     </div>
     <div class="typography-image">
         <img src="./assets/images/works/construction4.png">
