--- a/src/app/modules/work/components/event-management/event-management.component.html
+++ b/src/app/modules/work/components/event-management/event-management.component.html
@@ -10,7 +10,7 @@
                 </div>
                 <div class="col-md-7 orderone">
                     <div class="container">
-                        <img src="./assets/images/works/event banner.png">
+                        <img src="./assets/images/works/event banner.webp">
                     </div>
                 </div>
             </div>
@@ -29,7 +29,7 @@
         </div>
     </div>
     <div class="image-event">
-        <img src="./assets/images/works/event1.png">
+        <img src="./assets/images/works/event1.webp">
     </div>
    
     <div class="approach">
@@ -115,10 +115,10 @@
         <img src="./assets/images/works/management1.png">
     </div>
     <div class="image-event">
-        <img src="./assets/images/works/management2.png">
+        <img src="./assets/images/works/management2.webp">
     </div>
-    <div class="image-event">
-        <img src="./assets/images/works/eventmanagement3.png">
+    <div class="image-events">
+        <img src="./assets/images/works/eventmanagement3.webp">
     </div>
     <div class="work-description">
         <div class="container">
