--- a/src/app/modules/work/components/health-care/health-care.component.html
+++ b/src/app/modules/work/components/health-care/health-care.component.html
@@ -11,7 +11,7 @@
                 <div class="col-md-1"></div>
                 <div class="col-md-7 orderone">
                     <div class="container">
-                        <img src="./assets/images/works/adapt.png">
+                        <img src="./assets/images/works/adapt.webp">
                     </div>
                 </div>
             </div>
@@ -120,7 +120,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <img src="./assets/images/works/healthcare3.png">
+                    <img src="./assets/images/works/healthcare3.webp">
                 </div>
                 <div class="col-md-6">
                     <h6>Prototyping the ideas by building low fidelity wireframes</h6>
@@ -137,7 +137,7 @@
                     <p>A weekly planner to help user plan their weekly menu to plan ahead what to buy</p>
                 </div>
                 <div class="col-md-8">
-                    <img src="./assets/images/works/healthcare4.png">
+                    <img src="./assets/images/works/healthcare4.webp">
                 </div>
             </div>
         </div>
