--- a/src/app/modules/work/components/marketing/marketing.component.html
+++ b/src/app/modules/work/components/marketing/marketing.component.html
@@ -10,7 +10,7 @@
                 </div>
                 <div class="col-md-7 orderone">
                     <div class="container">
-                        <img src="./assets/images/works/market1.png">
+                        <img src="./assets/images/works/market1.webp">
                     </div>
                 </div>
             </div>
