--- a/src/app/modules/work/components/networking/networking.component.html
+++ b/src/app/modules/work/components/networking/networking.component.html
@@ -10,7 +10,7 @@
                 </div>
                 <div class="col-md-8 orderone">
                     <div class="container">
-                        <img src="./assets/images/works/network1.png">
+                        <img src="./assets/images/works/network1.webp">
                     </div>
                 </div>
             </div>
@@ -134,8 +134,8 @@
             </div>
         </div>
     </div>
-     <div class="typography-image">
-        <img src="./assets/images/works/sify4.png">
+     <div class="typography-image sify-image">
+        <img src="./assets/images/works/sify4.webp">
     </div>
     <div class="design-system">
         <div class="container">
@@ -146,8 +146,8 @@
             </div>
         </div>
     </div>
-    <div class="typography-image">
-        <img src="./assets/images/works/sify9.png">
+    <div class="typography-image sify-image">
+        <img src="./assets/images/works/sify9.webp">
     </div>
     <div class="typography-image">
         <img src="./assets/images/works/sify6.png">
