--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -14,7 +14,7 @@
                   <h3>Feature Work</h3>
                   <h2>Digital Transformation for Telcom</h2>
                   <h4>UX . UI . Mobile . B2B</h4>
-                  <div class="button">
+                  <div class="buttons">
                      <div class="btn" routerLink="/work/networking">Case Study</div>
                   </div>
                </div>
@@ -124,7 +124,7 @@
                      </div>
                   </div>
                   <div class="col-md-6">
-                     <h4>Information Portals</h4>
+                     <h4>Information <br>Portals</h4>
                   </div>
                   <div class="col-md-3">
                      <div class="image">
@@ -207,7 +207,7 @@
                      </div>
                   </div>
                   <div class="col-md-6">
-                     <h4>Mobile Applications</h4>
+                     <h4>Mobile<br> Applications</h4>
                   </div>
                   <div class="col-md-3">
                      <div class="image">
