--- a/src/app/components/works/works.component.html
+++ b/src/app/components/works/works.component.html
@@ -62,7 +62,7 @@
                   </div>
                   <div class="col-md-6 orderone">
                      <div class="container">
-                        <div class="right-content">
+                        <div class="right-content text-right">
                            <h2>Event Hosting 
                             <br>made stressless</h2>
                            <p>UX . UI . Web . Mobile . B2C</p>
@@ -105,7 +105,7 @@
                   </div>
                   <div class="col-md-6 orderone">
                      <div class="container">
-                        <div class="right-content">
+                        <div class="right-content text-right">
                            <h2>Website for Startup</h2>
                            <p>UX . UI . B2C</p>
                            <div class="btn outline-btn" routerLink="/work/uxahead">Case Study</div>
@@ -144,7 +144,7 @@
                   </div>
                   <div class="col-md-6 orderone">
                      <div class="container">
-                        <div class="right-content">
+                        <div class="right-content text-right">
                            <h2>Child Care Portal</h2>
                            <p>UX . UI . Mobile . Web . B2C</p>
                            <div class="btn outline-btn" routerLink="/work/childcare-portal">Case Study</div>
@@ -183,7 +183,7 @@
                   </div>
                   <div class="col-md-6 orderone">
                      <div class="container">
-                        <div class="right-content">
+                        <div class="right-content text-right">
                            <h2>Automobile Usability
                               Testing</h2>
                            <p>UUX . UI . Web .Mobile . B2C</p>
